=================== Release 1.0 2017-03-31 =====================
Description
    * First version of the App.
Changes
    * Version 1.0 Build 01 (2017/03/31)
        * Corrected minor bug with editing mode for tasks during FirstDay. (2017/03/23)
        * Corrected a bug where the task's table was not being refreshed after adding a new task. (2017/03/23)
        * Added support to change the state of DILATED tasks which have been migrated for tomorrow and only during the acceptance period of the current project. They can only be changed to PENDING or DILATE. (2017/03/22)
        * Added support for thousand separator. (2017/03/22)
        * Corrected a bug with the presentation of messages. Also added support for gestures in floating views. Also migrated AddView to the menu for ViewProjects. (2017/03/22)
        * Added support for configurations. (2017/03/21)
        * New L&F dark. (2017/03/21)
        * Modifications to the backup view. (2017/03/21)
        * Added support for auto-migrating core data models and some other minor modifications. (2017/03/21)
        * Added support for backups to iCloud in XML format. (2017/03/20)
        * Added base support for the *ConfigurationsView* and some improvements to the iCloud support. (2017/03/15)
        * Minor thread modification. (2017/03/15)
        * Added support for not showing categories which are empty. (2017/03/14)
        * Finalized support for only access to the DB via the Interface. (2017/03/14)
        * Improved support for filters. Added base support for XML backups. The marshall function is ready, only the unmarshall one is missing.
          Added support to compute MD5 hash of the DB data and the XML export. Added support for only access to the DB via the Interface. (2017/03/14)
        * Added external libraries for XML parsing. (2017/03/14)
        * Added support to migrate pending tasks too using migrate only check. (2017/03/10)
        * Mayor change to the L&F of the App. (2017/03/10)