@@ -498,6 +498,7 @@ enum TaskMode: String
     case editable = "Editable"
     case notEditable = "Not Editable"
     case canChangeState = "Can Change State"
+    case limitedEditing = "Limited Editing"
 }
 
 enum MenuItems: Int
