@@ -138,7 +138,7 @@ class AKSelectTaskStateView: AKCustomView, AKCustomViewProtocol
     
     @IBAction func dilate(_ sender: Any)
     {
-        if self.editMode == .editable || self.editMode == .canChangeState {
+        if self.editMode == .editable || self.editMode == .canChangeState || self.editMode == .limitedEditing {
             if let controller = self.controller as? AKViewTaskViewController {
                 // Change caller button.
                 controller.statusValue.setTitle(TaskStates.dilate.rawValue, for: .normal)
@@ -157,7 +157,7 @@ class AKSelectTaskStateView: AKCustomView, AKCustomViewProtocol
     
     @IBAction func pending(_ sender: Any)
     {
-        if self.editMode == .editable || self.editMode == .canChangeState {
+        if self.editMode == .editable || self.editMode == .canChangeState || self.editMode == .limitedEditing {
             if let controller = self.controller as? AKViewTaskViewController {
                 // Change caller button.
                 controller.statusValue.setTitle(TaskStates.pending.rawValue, for: .normal)
